--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,31 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-}
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  height: 100vm;
+  width: 500px;
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  border: solid 5px black;
+  border-radius: 15px;
 }
 
 .App-link {
   color: #61dafb;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App-button{
+  margin-top: 16px;
 }
+.App-form{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.App-contacts{
+  font-size: 16px;
+}
+
